--- a/algorithms.html
+++ b/algorithms.html
@@ -34,92 +34,102 @@
 <main>
 
   <div class="card">
-    <h2>Artifact: CS 320 Appointment Service</h2>
+    <h2>Artifact Overview</h2>
     <p>
-      This artifact is a Java service layer project created in CS 320 that supports creating, updating, and deleting appointment objects
-      while enforcing required validation rules. The project includes unit tests written with JUnit to verify the service logic and validate
-      that invalid input is handled correctly.
+      This artifact is based on my CS 320 work involving the development and testing of a Java service for managing appointment data.
+      The project applies validation logic to enforce business rules and includes unit tests written with JUnit to ensure correctness.
+      For CS 499, I enhanced this artifact to better demonstrate algorithmic thinking and effective use of data structures by improving
+      test design and reducing repetitive test code.
     </p>
-    <p>
-      <strong>Created:</strong> CS 320 (Software Test, Automation & Quality Assurance)
-    </p>
+
+    <p><strong>Course:</strong> CS 320: Software Test, Automation, and Quality Assurance</p>
+    <p><strong>Category:</strong> Algorithms and Data Structures</p>
   </div>
 
   <div class="card">
-    <h2>Why This Artifact Belongs in My ePortfolio</h2>
+    <h2>Why This Artifact Is Included</h2>
     <p>
-      I selected this artifact because it demonstrates how I apply algorithmic thinking and structured data handling to build reliable
-      software. While testing is often viewed as “supporting work,” this project highlights how data structures and repeatable test patterns
-      can be used to improve code quality and reduce errors. This artifact also demonstrates my ability to create solutions that follow
-      clear business rules through validation, which is critical in professional environments.
+      I selected this artifact for my ePortfolio because it demonstrates how algorithmic principles and data structures can be applied
+      to produce more maintainable and scalable software. While service logic and validation rules are important, the enhancement focuses
+      on improving how the project is tested by organizing test cases using structured collections and repeatable patterns. This approach
+      reflects professional testing practices and strengthens the reliability and long-term maintainability of the solution.
     </p>
   </div>
 
   <div class="card">
     <h2>Algorithms & Data Structures Demonstrated</h2>
-    <p><strong>Key skills showcased in this enhancement include:</strong></p>
+
     <div>
-      <span class="badge">Structured Collections (List)</span>
-      <span class="badge">Data-Driven / Parameterized Testing</span>
-      <span class="badge">Iterative Execution Pattern</span>
-      <span class="badge">Validation & Edge Case Testing</span>
-      <span class="badge">Clean, Maintainable Test Design</span>
+      <span class="badge">Collections (List)</span>
+      <span class="badge">Iterative Execution</span>
+      <span class="badge">Data-Driven Testing</span>
+      <span class="badge">Parameterized Tests</span>
+      <span class="badge">Validation & Edge Cases</span>
     </div>
+
     <ul>
       <li>
-        Refactored repetitive unit tests into a more efficient <strong>data-driven structure</strong> by storing test cases in a collection
-        and executing them through an iterative pattern.
+        Used <strong>structured collections</strong> to store multiple test case inputs instead of writing duplicated unit test code.
       </li>
       <li>
-        Used a structured approach to reduce duplicated code and improve readability while still covering required validation rules.
+        Applied an <strong>iterative execution pattern</strong> to run validation scenarios efficiently and consistently.
       </li>
       <li>
-        Strengthened reliability by validating expected behaviors across multiple test scenarios in a consistent way.
+        Improved test organization by using a scalable method that allows future test cases to be added with minimal code changes.
+      </li>
+      <li>
+        Strengthened overall reliability by validating expected results across multiple edge cases (including invalid inputs).
       </li>
     </ul>
   </div>
 
   <div class="card">
-    <h2>Enhancement Summary (What Improved)</h2>
+    <h2>Enhancement Summary</h2>
     <ul>
-      <li><strong>Before:</strong> Tests were more repetitive and required manual duplication for each scenario.</li>
-      <li><strong>After:</strong> Tests follow a structured, scalable approach using collections and repeatable execution patterns, making the test suite easier to extend and maintain.</li>
-      <li><strong>Result:</strong> Cleaner code, improved organization, and stronger demonstration of data structures and algorithmic principles applied to testing.</li>
+      <li><strong>Before:</strong> Unit tests were repetitive and required manual duplication for each new scenario.</li>
+      <li><strong>After:</strong> Unit tests were refactored into a structured approach using collections and repeatable execution patterns.</li>
+      <li><strong>Result:</strong> Cleaner test code, easier maintenance, scalable testing design, and stronger demonstration of algorithms/data structures.</li>
     </ul>
   </div>
 
   <div class="card">
     <h2>Course Outcomes Addressed</h2>
     <p>
-      This enhancement supports the Computer Science program outcome focused on designing and evaluating computing solutions using algorithmic
-      principles and appropriate computer science practices. It also supports professional communication by documenting the enhancement and
-      presenting the work in an organized, portfolio-ready format.
+      This enhancement demonstrates progress toward the Computer Science program outcome related to designing and evaluating computing solutions
+      using algorithmic principles and standards appropriate to the solution. It also supports communication outcomes by documenting the work
+      and presenting the enhancement in a portfolio-ready format.
     </p>
   </div>
 
   <div class="card">
-    <h2>Artifacts & Documentation</h2>
+    <h2>Artifact Files & Documentation</h2>
     <ul>
       <li>
-        <strong>Enhanced Code:</strong>
-        <a href="#" target="_blank">Add your GitHub repository link here</a>
-        <br/>
-        <em>(Tip: Create a repo like “CS320-Appointment-Service” and upload the enhanced project files.)</em>
+        <strong>Enhanced Artifact Folder:</strong>
+        <a href="https://github.com/sylvianett/Porfolio_CapstoneCS499/tree/main/artifacts/algorithms" target="_blank">
+          View Enhanced Artifact Code (GitHub)
+        </a>
       </li>
       <li>
         <strong>Milestone Three Narrative:</strong>
-        <em>Upload your narrative document into this repo and link it here.</em>
+        <a href="https://github.com/sylvianett/Porfolio_CapstoneCS499/blob/main/artifacts/algorithms/CS499_Milestone3_Algorithms_Narrative_Sylvia_Davis.docx" target="_blank">
+          Download Narrative (DOCX)
+        </a>
       </li>
     </ul>
+
+    <p>
+      <em>Note:</em> If the narrative link does not open, confirm the uploaded file name matches the link exactly.
+    </p>
   </div>
 
   <div class="card">
     <h2>Reflection</h2>
     <p>
-      Enhancing this artifact taught me the value of designing tests in a way that scales. I learned that using structured collections and
-      repeatable test patterns can simplify test suites, reduce errors, and make future changes easier. The main challenge was ensuring that
-      the refactoring preserved full test coverage while improving structure. This process strengthened my ability to think algorithmically
-      and write cleaner, more maintainable code.
+      Enhancing this artifact helped me understand how data structures and algorithmic approaches can improve the quality of unit tests.
+      By converting repetitive tests into data-driven patterns, I improved the maintainability of the test suite while keeping validation coverage strong.
+      A challenge in this enhancement was ensuring that refactoring did not reduce test coverage, which required careful planning and review of expected outcomes.
+      Overall, the enhancement strengthened my ability to design scalable solutions and reinforced the importance of clean, structured testing.
     </p>
   </div>
 
