--- a/software-design.html
+++ b/software-design.html
@@ -15,6 +15,7 @@
     .nav a { color: #fff; margin: 0 8px; }
     ul { padding-left: 20px; }
     .badge { display: inline-block; background: #eee; padding: 6px 10px; border-radius: 20px; margin: 4px; font-size: 14px; }
+    .small-note { font-size: 14px; color: #444; }
   </style>
 </head>
 <body>
@@ -35,10 +36,10 @@
   <div class="card">
     <h2>Artifact Overview: SYLTrack (Mobile Application)</h2>
     <p>
-      SYLTrack is a mobile application project focused on tracking user weight entries over time. The application supports adding,
-      viewing, and managing weight data in a structured way and is designed to support consistency, usability, and maintainability.
-      This artifact was originally created earlier in my program and was selected for CS 499 because it demonstrates my ability to
-      design and engineer a complete software solution, including thoughtful user interaction, input validation, and organized code structure.
+      SYLTrack is a mobile application designed to help users track weight entries and monitor progress toward goals over time.
+      The application supports managing weight data and provides dashboard-style summaries to support user consistency.
+      I selected SYLTrack for my CS 499 ePortfolio because it demonstrates real-world software engineering practices such as
+      maintainable architecture, multi-screen navigation, and scalable data handling.
     </p>
     <p><strong>Category:</strong> Software Design and Engineering</p>
   </div>
@@ -46,60 +47,89 @@
   <div class="card">
     <h2>Why This Artifact Is Included</h2>
     <p>
-      I included SYLTrack in my ePortfolio because it demonstrates professional software engineering skills beyond basic functionality.
-      It reflects my ability to plan a solution, structure code for maintainability, and improve the application through enhancement work.
-      This artifact also aligns with real-world development practices, including iterative improvement, testing/validation, and clear documentation.
+      I included SYLTrack in my ePortfolio because it demonstrates professional software design and engineering beyond basic functionality.
+      This project reflects my ability to analyze an existing codebase, identify weaknesses, and implement enhancements that improve structure,
+      usability, and maintainability. The artifact also demonstrates my growth in applying software engineering standards that support long-term
+      scalability and user-friendly design.
     </p>
   </div>
 
   <div class="card">
-    <h2>Software Design & Engineering Skills Demonstrated</h2>
+    <h2>Skills Demonstrated</h2>
     <div>
-      <span class="badge">Object-Oriented Programming</span>
-      <span class="badge">Maintainable Code Structure</span>
-      <span class="badge">Input Validation</span>
-      <span class="badge">UI/UX Improvement</span>
-      <span class="badge">Documentation</span>
+      <span class="badge">Mobile App Architecture</span>
+      <span class="badge">Navigation & User Flow</span>
+      <span class="badge">Maintainability</span>
+      <span class="badge">Scalability</span>
+      <span class="badge">Data Handling</span>
     </div>
+
     <ul>
-      <li><strong>Design organization:</strong> improved structure to make the project easier to maintain and extend.</li>
-      <li><strong>Reliability:</strong> strengthened validation to prevent invalid inputs and improve consistency.</li>
-      <li><strong>Usability:</strong> refined user interactions and layout decisions to better support the end user.</li>
-      <li><strong>Professional communication:</strong> documented changes and design choices for portfolio presentation.</li>
+      <li><strong>Architecture + scalability:</strong> improvements focused on a stable and extensible foundation.</li>
+      <li><strong>Dashboard development:</strong> implemented a centralized dashboard (SYLBoard) for easier user progress tracking.</li>
+      <li><strong>Navigation consistency:</strong> added persistent bottom navigation to improve user flow between screens.</li>
+      <li><strong>User-based data handling:</strong> ensured weight entries are associated with the authenticated user.</li>
+      <li><strong>Goal tracking + summaries:</strong> stored goals persistently and displayed summary progress for recent weight and progress toward goals.</li>
     </ul>
+
+    <p class="small-note">
+      These enhancements reflect professional software engineering practices such as separation of concerns, maintainability, and iterative improvement.
+    </p>
   </div>
 
   <div class="card">
-    <h2>Enhancement Summary</h2>
-    <ul>
-      <li><strong>Before:</strong> Core features worked, but the project needed improved structure and clearer presentation.</li>
-      <li><strong>After:</strong> Enhanced the application to reflect stronger engineering practices, including cleaner structure and improved usability.</li>
-      <li><strong>Result:</strong> A more professional, maintainable application that better represents software engineering skills.</li>
-    </ul>
+    <h2>Enhancement Summary (Milestone Two)</h2>
+    <p>
+      For Milestone Two, I prioritized improvements that strengthen the core foundation of the application rather than focusing on visual branding.
+      The enhancement work concentrated on navigation consistency, improved data handling, and scalable structure.
+      This milestone resulted in a more professional and maintainable application that better represents my software design and engineering skills.
+    </p>
+    <p>
+      Visual elements (icons, logos, and advanced theming) were intentionally deferred until later milestones to ensure that the underlying structure
+      is stable, scalable, and portfolio-ready first.
+    </p>
   </div>
 
   <div class="card">
     <h2>Artifact Files & Documentation</h2>
-    <p>
-      I am organizing the SYLTrack artifact files and documentation for publication in my ePortfolio. This section will include:
-    </p>
+
     <ul>
-      <li>Enhanced SYLTrack code files</li>
-      <li>Enhancement narrative (Software Design & Engineering)</li>
-      <li>Supporting screenshots and/or a short demo overview (if applicable)</li>
+      <li>
+        <strong>Software Design Artifact Folder:</strong>
+        <a href="https://github.com/sylvianett/Porfolio_CapstoneCS499/tree/main/artifacts/software-design" target="_blank">
+          View SYLTrack Files (GitHub Folder)
+        </a>
+      </li>
+
+      <li>
+        <strong>SYLTrack Enhanced ZIP:</strong>
+        <a href="https://github.com/sylvianett/Porfolio_CapstoneCS499/blob/main/artifacts/software-design/SYLTrack_SylviaDavis%20Enhanced%20Milestone%20Two.zip" target="_blank">
+          Download SYLTrack (ZIP)
+        </a>
+      </li>
+
+      <li>
+        <strong>Milestone Two Enhancement Narrative:</strong>
+        <a href="https://github.com/sylvianett/Porfolio_CapstoneCS499/blob/main/artifacts/software-design/CS499_Milestone_Two_Enhancement_Narrative_Sylvia_Davis.docx" target="_blank">
+          Download Narrative (DOCX)
+        </a>
+      </li>
     </ul>
-    <p>
-      <em>Note:</em> I will publish the final enhanced files here once the enhancements are finalized and reviewed.
+
+    <p class="small-note">
+      If any download link does not work, the filename in GitHub may be slightly different (spacing/capitalization).
+      If that happens, tell me and I’ll fix the links instantly.
     </p>
   </div>
 
   <div class="card">
     <h2>Reflection</h2>
     <p>
-      Working on SYLTrack strengthened my understanding of how design decisions impact maintainability and user experience.
-      This artifact helped me practice improving an existing codebase by identifying weaknesses, refining structure, and making targeted changes
-      that provide clear value. A challenge in this process was balancing usability improvements with keeping the code organized and easy to maintain.
-      Overall, enhancing SYLTrack reinforced the importance of thoughtful design, iteration, and clear communication in professional software development.
+      Enhancing SYLTrack strengthened my understanding of how software design decisions impact maintainability, scalability, and user experience.
+      I learned the value of improving structure and navigation first to reduce technical debt and make future enhancements easier.
+      One challenge was implementing new usability improvements while keeping the code organized and scalable.
+      Overall, this artifact demonstrates growth in software engineering practices and my ability to improve an existing solution through
+      thoughtful design and iteration.
     </p>
   </div>
 
